<resources>
    <string name="app_name">Rudibonsai</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="cart">Keranjang</string>
    <string name="order">Pesanan</string>
    <string name="account">Akun</string>
    <string name="search">Pencarian</string>
    <string name="product_desc">Deskripsi produk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Kategori</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Gagal login"</string>
    <string name="register">Daftar</string>
    <string name="delete">Hapus</string>
    <string name="quantity">Jumlah</string>
    <string name="detail">detail</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_register">Belum punya akun?</string>
    <string name="password_confirm">Konfirmasi Password</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="address">Alamat</string>
    <string name="logout">Keluar</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="logout_message">Anda yakin ingin keluar?</string>
    <string name="cancel">Batal</string>
    <string name="loading">Memuat</string>
    <string name="please_wait">Mohon tunggu...</string>
    <string name="checkout">Checkout</string>
    <string name="choose_shipping_service">Pilih Jenis Layanan</string>
    <string name="reload">Muat Ulang</string>
    <string name="all">Semua</string>
    <string name="pending">Tertunda</string>
    <string name="processed">Diproses</string>
    <string name="shipped">Dikirim</string>
    <string name="done">Selesai</string>
    <string name="canceled">Batal</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="laki_laki">Laki - laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="nomor_telp">Nomor Telepon</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="provinsi">provinsi</string>
    <string name="show_prov">Pilih Provinsi</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="detail_address">Detail Alamat</string>
    <string name="submit">Daftar Akun</string>
    <string name="red_akun">Sudah punya akun?</string>
    <string name="masuk">Log In</string>
    <string name="bold">bold</string>
    <string name="number">number</string>
    <string name="pilihprov">Pilih Provinsi</string>
    <string name="pilihkab">Pilih Kabupaten</string>
    <string name="pilkec">Pilih Kecamatan</string>
</resources>