<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.OrderFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_order_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:elevation="8dp"
        app:tabBackground="@color/green_500"
        app:tabIndicatorColor="@color/white"
        app:tabMode="scrollable"
        app:tabPaddingEnd="16dp"
        app:tabPaddingStart="16dp"
        app:tabSelectedTextColor="@color/material_on_primary_emphasis_high_type"
        app:tabTextColor="@color/material_on_primary_emphasis_medium">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_order_status_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_order_status_pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_order_status_processed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/processed" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_order_status_shipped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipped" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_order_status_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_order_status_canceled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canceled" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_order_status" />
</RelativeLayout>