<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">

    <RelativeLayout
        android:id="@+id/cart_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cart_product_image"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:contentDescription="@string/product_desc"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <RelativeLayout
            android:id="@+id/cart_card_body_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/cart_card_body_bottom"
            android:layout_toRightOf="@id/cart_product_image"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/cart_product_title"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:maxLines="2"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed eros dui. Phasellus at lacus tellus. Maecenas pellentesque scelerisque erat, sit amet placerat purus condimentum vitae."
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cart_product_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cart_product_title"
                android:layout_marginTop="4dp"
                android:text="Stok : 20"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
                android:textColor="@color/material_on_surface_emphasis_high_type" />

            <TextView
                android:id="@+id/cart_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="Rp 200.000,00"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:textColor="@color/green_700" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cart_card_body_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cart_product_image"
            android:paddingTop="12dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/btn_delete_cart"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/delete"
                android:textColor="@color/design_default_color_error" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cart_product_qty_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cart_product_qty_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/cart_card_body_bottom"
            android:background="?android:attr/listDivider" />

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/material_on_surface_stroke"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_item">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TOTAL HARGA (3 Item)"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="Rp 200.000,00"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:layout_marginTop="8dp"
                android:text="Checkout" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>